Add mobile page support

--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <title>Muhammad Azhari</title>
   </head>
   <body>
-    <header>
-      <h2>Muhammad Azhari</h2>
+    <header class="header">
+      <h2 class="header__title">Muhammad Azhari</h2>
     </header>
-    <main>
-      <section>
+    <main class="main-content">
+      <section class="card bg-primary-1">
         <img
+          class="card__image"
           src="assets/profile.png"
           alt="An image of Muhammad Azhari doing a pose"
         />
-        <div>
-          <p><span>Name: </span>Muhammad Azhari</p>
-          <p><span>Date Of Birth: </span>09/05/2004</p>
-          <p><span>Hobbies: </span>Reading</p>
-          <p><span>Languages: </span>English, Indonesia</p>
+        <div class="card__bio">
+          <p><span class="bold-text">Name: </span>Muhammad Azhari</p>
+          <p><span class="bold-text">Date Of Birth: </span>09/05/2004</p>
+          <p><span class="bold-text">Hobbies: </span>Reading</p>
+          <p><span class="bold-text">Languages: </span>English, Indonesia</p>
         </div>
       </section>
-      <section>
-        <h1>About</h1>
-        <p>
+      <section class="card bg-primary-2">
+        <h1 class="card__title">About</h1>
+        <p class="justify-text">
           David Ụzọchukwu (b. 1998) is an Austrian and Nigerian artist engaging
           with questions of longing and belonging through (self) portraiture.
           Ụzọchukwu's work has been exhibited in group shows at Bozar (BE), V&A
@@ -35,11 +36,12 @@
           Studies at HU in Berlin.
         </p>
       </section>
-      <section>
-        <h1>Social</h1>
+      <section class="card bg-primary-3">
+        <h1 class="card__title">Social</h1>
         <!-- Email -->
-        <div>
+        <div class="social mb-1">
           <svg
+            class="social__icon"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -55,8 +57,9 @@
           <span>azharumuhammad@gmail.com</span>
         </div>
         <!-- Phone number -->
-        <div>
+        <div class="social mb-1">
           <svg
+            class="social__icon"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -72,8 +75,9 @@
           <span>+62895604480279</span>
         </div>
         <!-- Instagram -->
-        <div>
+        <div class="social mb-1">
           <svg
+            class="social__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
             fill="currentColor"
@@ -85,8 +89,9 @@
           <span>@azharazhar1010</span>
         </div>
         <!-- LinkedIn -->
-        <div>
+        <div class="social">
           <svg
+            class="social__icon"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 24 24"
             fill="currentColor"
