Add support for larger breakpoint

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2 class="header__title">Muhammad Azhari</h2>
     </header>
     <main class="main-content">
-      <section class="card bg-primary-1">
+      <section class="card card-bio">
         <img
           class="card__image"
           src="assets/profile.png"
@@ -25,7 +25,7 @@
           <p><span class="bold-text">Languages: </span>English, Indonesia</p>
         </div>
       </section>
-      <section class="card bg-primary-2">
+      <section class="card card-about">
         <h1 class="card__title">About</h1>
         <p class="justify-text">
           David Ụzọchukwu (b. 1998) is an Austrian and Nigerian artist engaging
@@ -36,7 +36,7 @@
           Studies at HU in Berlin.
         </p>
       </section>
-      <section class="card bg-primary-3">
+      <section class="card card-social">
         <h1 class="card__title">Social</h1>
         <!-- Email -->
         <div class="social mb-1">
