Use self profile

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="card card-bio">
         <img
           class="card__image"
-          src="assets/profile.png"
+          src="assets/self-profile.jpg"
           alt="An image of Muhammad Azhari doing a pose"
         />
         <div class="card__bio">
@@ -28,12 +28,9 @@
       <section class="card card-about">
         <h1 class="card__title">About</h1>
         <p class="justify-text">
-          David Ụzọchukwu (b. 1998) is an Austrian and Nigerian artist engaging
-          with questions of longing and belonging through (self) portraiture.
-          Ụzọchukwu's work has been exhibited in group shows at Bozar (BE), V&A
-          (UK), Rencontres d’Arles (FR), and will be part of the 13th Bamako
-          Encounters (ML). Ụzọchukwu pursues a BA in Philosophy and Cultural
-          Studies at HU in Berlin.
+          Currently studying at SMKN 2 Bandung majoring in Software Engineer. Have experience in
+          Web Development with more than 2 years experience. And has a certificate for a professional placement
+          at PT. BISA AI
         </p>
       </section>
       <section class="card card-social">
