Add partials feature for better development

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
     <title>Muhammad Azhari</title>
   </head>
   <body>
-<header class="header">
-  <h2 class="header__title">Muhammad Azhari</h2>
-</header>
+    {{ partials/header.html }}
     <main class="main-content">
       <section class="card card-bio">
         <img
